--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,19 @@
     "description": "Chrome extension to see your linkedin updates and alerts",
     "version": "0.1.0",
     "author": "Greg Babbert",
-    "background": {
-        "service_worker": "script.js"
-    },
+    "content_scripts": [
+        {
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": [
+                "script.js"
+            ],
+            "css": [
+                "styles.css"
+            ]
+        }
+    ],
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
