--- a/manifest.json
+++ b/manifest.json
@@ -20,10 +20,10 @@
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "128": "/images/linkconnect.png"
+            "128": "/images/textSpeak.png"
         }
     },
     "icons": {
-        "128": "/images/linkconnect.png"
+        "128": "/images/textSpeak.png"
     }
 }
